<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:gravity="center_horizontal"
      android:padding="@dimen/spacing_medium_extra"
      android:background="@color/prime_white_1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/auth_prime_subtitle"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_big"
        android:text="@string/auth_your_email"
        />

    <EditText
        android:id="@+id/login_field_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:inputType="textNoSuggestions|textEmailAddress"
        android:background="@android:color/transparent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_tiniest"
        android:background="@color/prime_grey_3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/auth_password"
         />

    <EditText
        android:id="@+id/login_field_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:inputType="textPassword"
        android:background="@android:color/transparent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_tiniest"
        android:background="@color/prime_grey_3" />

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_huge"
        android:layout_marginTop="@dimen/spacing_large_extra"
        android:layout_marginBottom="@dimen/spacing_large_extra"
        android:text="@string/auth_button_login"
        android:enabled="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_prime_forgot_user_pass"
         />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_huge"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_gravity="bottom"
            android:textAllCaps="false"
            android:text="@string/auth_need_new_user" />

    </FrameLayout>

</LinearLayout>
